minilang.output
Useless nonterminals

   identifier
   comment


Terminals which are not used

   WHILE
   DO
   DONE
   IF
   THEN
   ELSE
   ENDIF
   PRINT
   READ
   tFLOAT
   tINT
   tSTRING_LITERAL
   PLUS
   MINUS
   MULT
   DIV
   EQUAL
   tASSIGN
   COMMENT


Useless rules

    8 identifier: tIDEN

    9 comment: COMMENT


Grammar

    0 $accept: input $end

    1 input: declarations

    2 declarations: declarations VAR tIDEN COLON FLOAT ENDL
    3             | declarations VAR tIDEN COLON INT ENDL
    4             | declarations VAR tIDEN COLON STRING ENDL
    5             | VAR tIDEN COLON FLOAT ENDL
    6             | VAR tIDEN COLON INT ENDL
    7             | VAR tIDEN COLON STRING ENDL


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 2 3 4 5 6 7
WHILE (259)
DO (260)
DONE (261)
IF (262)
THEN (263)
ELSE (264)
ENDIF (265)
PRINT (266)
READ (267)
FLOAT (268) 2 5
STRING (269) 4 7
INT (270) 3 6
tIDEN (271) 2 3 4 5 6 7
tFLOAT (272)
tINT (273)
tSTRING_LITERAL (274)
PLUS (275)
MINUS (276)
MULT (277)
DIV (278)
EQUAL (279)
tASSIGN (280)
COMMENT (281)
ENDL (282) 2 3 4 5 6 7
COLON (283) 2 3 4 5 6 7


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
input (30)
    on left: 1, on right: 0
declarations (31)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4


state 0

    0 $accept: . input $end

    VAR  shift, and go to state 1

    input         go to state 2
    declarations  go to state 3


state 1

    5 declarations: VAR . tIDEN COLON FLOAT ENDL
    6             | VAR . tIDEN COLON INT ENDL
    7             | VAR . tIDEN COLON STRING ENDL

    tIDEN  shift, and go to state 4


state 2

    0 $accept: input . $end

    $end  shift, and go to state 5


state 3

    1 input: declarations .
    2 declarations: declarations . VAR tIDEN COLON FLOAT ENDL
    3             | declarations . VAR tIDEN COLON INT ENDL
    4             | declarations . VAR tIDEN COLON STRING ENDL

    VAR  shift, and go to state 6

    $default  reduce using rule 1 (input)


state 4

    5 declarations: VAR tIDEN . COLON FLOAT ENDL
    6             | VAR tIDEN . COLON INT ENDL
    7             | VAR tIDEN . COLON STRING ENDL

    COLON  shift, and go to state 7


state 5

    0 $accept: input $end .

    $default  accept


state 6

    2 declarations: declarations VAR . tIDEN COLON FLOAT ENDL
    3             | declarations VAR . tIDEN COLON INT ENDL
    4             | declarations VAR . tIDEN COLON STRING ENDL

    tIDEN  shift, and go to state 8


state 7

    5 declarations: VAR tIDEN COLON . FLOAT ENDL
    6             | VAR tIDEN COLON . INT ENDL
    7             | VAR tIDEN COLON . STRING ENDL

    FLOAT   shift, and go to state 9
    STRING  shift, and go to state 10
    INT     shift, and go to state 11


state 8

    2 declarations: declarations VAR tIDEN . COLON FLOAT ENDL
    3             | declarations VAR tIDEN . COLON INT ENDL
    4             | declarations VAR tIDEN . COLON STRING ENDL

    COLON  shift, and go to state 12


state 9

    5 declarations: VAR tIDEN COLON FLOAT . ENDL

    ENDL  shift, and go to state 13


state 10

    7 declarations: VAR tIDEN COLON STRING . ENDL

    ENDL  shift, and go to state 14


state 11

    6 declarations: VAR tIDEN COLON INT . ENDL

    ENDL  shift, and go to state 15


state 12

    2 declarations: declarations VAR tIDEN COLON . FLOAT ENDL
    3             | declarations VAR tIDEN COLON . INT ENDL
    4             | declarations VAR tIDEN COLON . STRING ENDL

    FLOAT   shift, and go to state 16
    STRING  shift, and go to state 17
    INT     shift, and go to state 18


state 13

    5 declarations: VAR tIDEN COLON FLOAT ENDL .

    $default  reduce using rule 5 (declarations)


state 14

    7 declarations: VAR tIDEN COLON STRING ENDL .

    $default  reduce using rule 7 (declarations)


state 15

    6 declarations: VAR tIDEN COLON INT ENDL .

    $default  reduce using rule 6 (declarations)


state 16

    2 declarations: declarations VAR tIDEN COLON FLOAT . ENDL

    ENDL  shift, and go to state 19


state 17

    4 declarations: declarations VAR tIDEN COLON STRING . ENDL

    ENDL  shift, and go to state 20


state 18

    3 declarations: declarations VAR tIDEN COLON INT . ENDL

    ENDL  shift, and go to state 21


state 19

    2 declarations: declarations VAR tIDEN COLON FLOAT ENDL .

    $default  reduce using rule 2 (declarations)


state 20

    4 declarations: declarations VAR tIDEN COLON STRING ENDL .

    $default  reduce using rule 4 (declarations)


state 21

    3 declarations: declarations VAR tIDEN COLON INT ENDL .

    $default  reduce using rule 3 (declarations)
